--- a/source/WebApiContrib.MessageHandlers/WebApiContrib.MessageHandlers.csproj
+++ b/source/WebApiContrib.MessageHandlers/WebApiContrib.MessageHandlers.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Activation" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -79,6 +80,7 @@
     <Compile Include="Security\IAuthenticationHandler.cs" />
     <Compile Include="Security\IUserValidation.cs" />
     <Compile Include="TraceMessageHandler.cs" />
+    <Compile Include="UriFormatExtensionChannel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
