--- a/source/WebApiContrib.OperationHandlers/WebApiContrib.OperationHandlers.csproj
+++ b/source/WebApiContrib.OperationHandlers/WebApiContrib.OperationHandlers.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Activation" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -74,6 +75,7 @@
       <Link>SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="CompressionHandler.cs" />
+    <Compile Include="JsonpResponseHandler.cs" />
     <Compile Include="LoggingOperationHandler.cs" />
   </ItemGroup>
   <ItemGroup>
