--- a/Samples/ContactManager/ContactManager.csproj
+++ b/Samples/ContactManager/ContactManager.csproj
@@ -46,54 +46,56 @@
     <WCFjQueryAssemblyPath>$(ProgramFiles(x86))\$(RelativeInstallPath)</WCFjQueryAssemblyPath>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Http.Formatters, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libs\WCFHTTPPreview3\Http.Formatters.dll</HintPath>
+    <Reference Include="EntityDataModel">
+      <HintPath>..\packages\WebApi.OData.0.5.0\lib\40-Full\EntityDataModel.dll</HintPath>
+    </Reference>
+    <Reference Include="Http.Formatters, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.ApplicationServer.Http">
+      <HintPath>..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.ApplicationServer.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ApplicationServer.HttpEnhancements">
+      <HintPath>..\packages\WebApi.Enhancements.0.5.0\lib\40-Full\Microsoft.ApplicationServer.HttpEnhancements.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.Http">
-      <HintPath>..\..\libs\WCFHTTPPreview3\Microsoft.Http.dll</HintPath>
+    <Reference Include="Microsoft.Data.Spatial">
+      <HintPath>..\packages\WebApi.OData.0.5.0\lib\40-Full\Microsoft.Data.Spatial.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Net.Http">
-      <HintPath>..\..\libs\WCFHTTPPreview3\Microsoft.Net.Http.dll</HintPath>
+    <Reference Include="Microsoft.Json">
+      <HintPath>..\packages\JsonValue.0.5.0\lib\40\Microsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Runtime.Serialization.Json">
-      <HintPath>..\..\libs\WCFHTTPPreview3\Microsoft.Runtime.Serialization.Json.dll</HintPath>
+    <Reference Include="Microsoft.Net.Http, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\HttpClient.0.5.0\lib\40\Microsoft.Net.Http.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.ServiceModel.Http">
-      <HintPath>..\..\libs\WCFHTTPPreview3\Microsoft.ServiceModel.Http.dll</HintPath>
+    <Reference Include="Microsoft.Net.Http.Formatting">
+      <HintPath>..\packages\HttpClient.0.5.0\lib\40\Microsoft.Net.Http.Formatting.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.ServiceModel.WebHttp">
-      <HintPath>..\..\libs\WCFHTTPPreview3\Microsoft.ServiceModel.WebHttp.dll</HintPath>
+    <Reference Include="Microsoft.Net.Http.Formatting.OData">
+      <HintPath>..\packages\WebApi.OData.0.5.0\lib\40-Full\Microsoft.Net.Http.Formatting.OData.dll</HintPath>
     </Reference>
-    <Reference Include="NHaml">
-      <HintPath>..\..\libs\Templating\NHaml.dll</HintPath>
+    <Reference Include="Microsoft.Runtime.Serialization.Internal">
+      <HintPath>..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.Runtime.Serialization.Internal.dll</HintPath>
     </Reference>
-    <Reference Include="Nina.ViewEngines">
-      <HintPath>..\..\libs\Templating\Nina.ViewEngines.dll</HintPath>
+    <Reference Include="Microsoft.Server.Common">
+      <HintPath>..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.Server.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Nina.ViewEngines.NHaml">
-      <HintPath>..\..\libs\Templating\Nina.ViewEngines.NHaml.dll</HintPath>
+    <Reference Include="Microsoft.ServiceModel.Internal">
+      <HintPath>..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.ServiceModel.Internal.dll</HintPath>
     </Reference>
-    <Reference Include="Nina.ViewEngines.Razor">
-      <HintPath>..\..\libs\Templating\Nina.ViewEngines.Razor.dll</HintPath>
-    </Reference>
-    <Reference Include="RazorEngine.Core">
-      <HintPath>..\..\libs\Templating\RazorEngine.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="RazorEngine.Templates">
-      <HintPath>..\..\libs\Templating\RazorEngine.Templates.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.ServiceModel.WebHttp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Data.Linq" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Security" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Data.OData">
+      <HintPath>..\packages\WebApi.OData.0.5.0\lib\40-Full\System.Data.OData.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Activation" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
@@ -151,6 +153,12 @@
   <ItemGroup>
     <None Include="Templates\Contact.haml" />
     <None Include="Templates\Contact.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\source\Formatters\NinaViewEngine\WebApiContrib.Formatters.NinaViewEngine.csproj">
+      <Project>{4987D7F1-61CD-488C-8F0E-B34089E967DE}</Project>
+      <Name>WebApiContrib.Formatters.NinaViewEngine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
