--- a/Samples/packages/repositories.config
+++ b/Samples/packages/repositories.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\SelfHosted\server\packages.config" />
   <repository path="..\ContactManager\packages.config" />
   <repository path="..\SelfHosted\FSharpServer\packages.config" />
+  <repository path="..\..\source\WebApiContrib.OperationHandlers\packages.config" />
+  <repository path="..\..\source\WebApiContrib.MessageHandlers\packages.config" />
+  <repository path="..\..\source\Formatters\NinaViewEngine\packages.config" />
+  <repository path="..\..\source\Formatters\JSONNet\packages.config" />
+  <repository path="..\..\source\Formatters\Core\packages.config" />
+  <repository path="..\SelfHosted\server\packages.config" />
+  <repository path="..\DataContractExample\packages.config" />
 </repositories>
