--- a/Samples/HypermediaServer/HypermediaAPI/HypermediaAPI.csproj
+++ b/Samples/HypermediaServer/HypermediaAPI/HypermediaAPI.csproj
@@ -32,40 +32,40 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityDataModel">
-      <HintPath>..\packages\WebApi.OData.0.5.0\lib\40-Full\EntityDataModel.dll</HintPath>
+      <HintPath>..\..\packages\WebApi.OData.0.5.0\lib\40-Full\EntityDataModel.dll</HintPath>
     </Reference>
     <Reference Include="Hal">
-      <HintPath>..\packages\Hal.NET.1.0.10\lib\Hal.dll</HintPath>
+      <HintPath>..\..\packages\Hal.NET.1.0.10\lib\Hal.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ApplicationServer.Http">
-      <HintPath>..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.ApplicationServer.Http.dll</HintPath>
+      <HintPath>..\..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.ApplicationServer.Http.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ApplicationServer.HttpEnhancements">
-      <HintPath>..\packages\WebApi.Enhancements.0.5.0\lib\40-Full\Microsoft.ApplicationServer.HttpEnhancements.dll</HintPath>
+      <HintPath>..\..\packages\WebApi.Enhancements.0.5.0\lib\40-Full\Microsoft.ApplicationServer.HttpEnhancements.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Data.Spatial">
-      <HintPath>..\packages\WebApi.OData.0.5.0\lib\40-Full\Microsoft.Data.Spatial.dll</HintPath>
+      <HintPath>..\..\packages\WebApi.OData.0.5.0\lib\40-Full\Microsoft.Data.Spatial.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Json">
-      <HintPath>..\packages\JsonValue.0.5.0\lib\40\Microsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\JsonValue.0.5.0\lib\40\Microsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Net.Http">
-      <HintPath>..\packages\HttpClient.0.5.0\lib\40\Microsoft.Net.Http.dll</HintPath>
+      <HintPath>..\..\packages\HttpClient.0.5.0\lib\40\Microsoft.Net.Http.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Net.Http.Formatting">
-      <HintPath>..\packages\HttpClient.0.5.0\lib\40\Microsoft.Net.Http.Formatting.dll</HintPath>
+      <HintPath>..\..\packages\HttpClient.0.5.0\lib\40\Microsoft.Net.Http.Formatting.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Net.Http.Formatting.OData">
-      <HintPath>..\packages\WebApi.OData.0.5.0\lib\40-Full\Microsoft.Net.Http.Formatting.OData.dll</HintPath>
+      <HintPath>..\..\packages\WebApi.OData.0.5.0\lib\40-Full\Microsoft.Net.Http.Formatting.OData.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Runtime.Serialization.Internal">
-      <HintPath>..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.Runtime.Serialization.Internal.dll</HintPath>
+      <HintPath>..\..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.Runtime.Serialization.Internal.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Server.Common">
-      <HintPath>..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.Server.Common.dll</HintPath>
+      <HintPath>..\..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.Server.Common.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ServiceModel.Internal">
-      <HintPath>..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.ServiceModel.Internal.dll</HintPath>
+      <HintPath>..\..\packages\WebApi.0.5.0\lib\40-Full\Microsoft.ServiceModel.Internal.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -73,7 +73,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.OData">
-      <HintPath>..\packages\WebApi.OData.0.5.0\lib\40-Full\System.Data.OData.dll</HintPath>
+      <HintPath>..\..\packages\WebApi.OData.0.5.0\lib\40-Full\System.Data.OData.dll</HintPath>
     </Reference>
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Activation" />
@@ -85,13 +85,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="WebApiContrib.Formatters.Core">
-      <HintPath>..\packages\WebAPIContrib.0.5.0\lib\WebApiContrib.Formatters.Core.dll</HintPath>
+      <HintPath>..\..\packages\WebAPIContrib.0.5.0\lib\WebApiContrib.Formatters.Core.dll</HintPath>
     </Reference>
     <Reference Include="WebApiContrib.MessageHandlers">
-      <HintPath>..\packages\WebAPIContrib.0.5.0\lib\WebApiContrib.MessageHandlers.dll</HintPath>
+      <HintPath>..\..\packages\WebAPIContrib.0.5.0\lib\WebApiContrib.MessageHandlers.dll</HintPath>
     </Reference>
     <Reference Include="WebApiContrib.OperationHandlers">
-      <HintPath>..\packages\WebAPIContrib.0.5.0\lib\WebApiContrib.OperationHandlers.dll</HintPath>
+      <HintPath>..\..\packages\WebAPIContrib.0.5.0\lib\WebApiContrib.OperationHandlers.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
@@ -100,17 +100,19 @@
     <Compile Include="Login\LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Partner\List\PartnerListController.cs" />
+    <Compile Include="Partner\PartnerController.cs" />
     <Compile Include="RootController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RootView.xaml.cs">
       <DependentUpon>RootView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Tools\HalContent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Partner\List\" />
     <Folder Include="Transaction\List\" />
   </ItemGroup>
   <ItemGroup>
@@ -118,10 +120,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="RootView.xaml">
+    <Resource Include="RootView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </Page>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
