--- a/Samples/packages/repositories.config
+++ b/Samples/packages/repositories.config
@@ -8,8 +8,7 @@
   <repository path="..\..\source\Formatters\JSONNet\packages.config" />
   <repository path="..\..\source\Formatters\Core\packages.config" />
   <repository path="..\SelfHosted\server\packages.config" />
-  <repository path="..\DataContractExample\packages.config" />
   <repository path="..\HypermediaServer\HypermediaServer\packages.config" />
-  <repository path="..\HypermediaAPI\packages.config" />
-  <repository path="..\HypermediaServer\HypermediaServer\MvcHost\packages.config" />
+  <repository path="..\HypermediaServer\HypermediaAPI\packages.config" />
+  <repository path="..\HypermediaServer\HypermediaClient\packages.config" />
 </repositories>
